--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ Homepage = "https://example.com"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["simple_sphinx_xml_sitemap*"]
+
+[tool.uv.workspace]
+members = ["examples/*"]
