--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ license = {file = "LICENSE"}
 requires-python = ">=3.8"
 dependencies = ["Sphinx>=4"]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7",
+]
+
 [project.urls]
 Homepage = "https://example.com"
 
